--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 	<!-- BootStrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+	<!-- Animate CSS -->
+	<link
+    rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 	<!-- My Own CSS -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -25,7 +29,7 @@
 	<div class="container d-flex align-items-center h-100 ">
 		<div class="row">
 			<header class="text-center col-12">
-				<h1 class="text-uppercase"><strong>Let's reach your beautiful dream together!</strong></h1>
+				<h1 class="animate__animated animate__zoomIn"><strong>Let's reach your beautiful dream together!</strong></h1>
 			</header>
 
 		<div class="buffer col-12"></div>
