--- a/index.html
+++ b/index.html
@@ -1,47 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Startup</title>
-
-	<!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<!-- Google Fonts -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
-
-	<!-- BootStrap CSS -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-	<!-- Animate CSS -->
-	<link
-    rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
-	<!-- My Own CSS -->
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Edosa</title>
+  <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
-
 <body>
-	<div class="container d-flex align-items-center h-100 ">
-		<div class="row">
-			<header class="text-center col-12">
-				<h1 class="animate__animated animate__zoomIn"><strong>Let's reach your beautiful dream together!</strong></h1>
-			</header>
+    <section>
+        <header>
+            <h2 class="logo"></h2>
+            <div class="navigation">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Services</a>
+                <a href="">Contact Us</a>
+            </div>
+        </header>
+        <div class="content">
+            <div class="about">
+                <h2>
+                    Dedicated Healthcare Platform for Obstructive Sleep Apnea
+                </h2>
+                <p>
+                    EDOSA platform helps the patients with sleep 
+                    apnea(diagnosed or undiagnosed) to better 
+                    communicate with sleep doctors. 
+                </p>
+                <h3>
+                    Let’s make Sleep Apnea sufferers Feel Better!
+                </h3>
+                <a href="login.html" class="getstarted-btn">Get Started</a>
+            </div>
+        </div>
+    </section>
 
-		<div class="buffer col-12"></div>
-
-			<section class="text-center col-12">
-				<a href="login.html">
-					<button 
-					class="btn btn-primary btn-xl">Find out more 
-					</button>
-				</a>	
-			</section>
-		</div>
-	</div>
 </body>
-</html>  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
