--- a/login.html
+++ b/login.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html style="background-color: #114A9C">
+<html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- Animate CSS -->
-	<link
-    rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
-	<title>Login Page!</title>
+	<title>Login</title>
 </head>
 <body>
-	<h1 class="animate__animated animate__bounce">Welcome to Login Page!</h1>
+
 </body>
 </html>
