--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Edosa</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
     <section>
+        <input type="checkbox" id="check">
         <header>
             <h2 class="logo"></h2>
             <div class="navigation">
@@ -16,6 +18,10 @@
                 <a href="">Services</a>
                 <a href="">Contact Us</a>
             </div>
+            <label for="check">
+                <i class="fas fa-bars menu-btn"></i>
+                <i class="fas fa-times close-btn"></i>
+            </label>
         </header>
         <div class="content">
             <div class="about">
@@ -36,21 +42,4 @@
     </section>
 
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
