--- a/login.html
+++ b/login.html
@@ -4,8 +4,29 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Login</title>
+	<link rel="stylesheet" href="login.css">
 </head>
 <body>
-
+	<div class="center">
+		<h2 class="logo"></h2>
+		<h1>Welcome</h1>
+		<form method="post">
+			<div class="text_field">
+				<input type="text" required>
+				<span></span>
+				<label>Username</label>
+			</div>
+			<div class="text_field">
+				<input type="password" required>
+				<span></span>
+				<label>Password</label>
+			</div>
+			<div class="pass">Forgot Password?</div>
+			<input type="submit" value="Login">
+			<div class="signup_link">
+				Don't have an account yet? <a href="">Sign Up</a>
+			</div>
+		</form>
+	</div>
 </body>
 </html>
