--- a/login.html
+++ b/login.html
@@ -7,14 +7,14 @@
 	<link rel="stylesheet" href="login.css">
 </head>
 <body>
-	<div class="center">
-		<h2 class="logo"></h2>
-		<h1>Welcome</h1>
-		<form method="post">
+	<div class="container">
+		<form action="" class="form">
+			<h1 class="logo"></h1>
+			<h2>Welcome!</h2>
 			<div class="text_field">
 				<input type="text" required>
 				<span></span>
-				<label>Username</label>
+				<label> Email or Username</label>
 			</div>
 			<div class="text_field">
 				<input type="password" required>
@@ -27,6 +27,9 @@
 				Don't have an account yet? <a href="">Sign Up</a>
 			</div>
 		</form>
+		<div class="side">
+			<img src="login-bg-photo.png">
+		</div>
 	</div>
 </body>
 </html>
