--- a/login.html
+++ b/login.html
@@ -3,33 +3,95 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Login</title>
-	<link rel="stylesheet" href="login.css">
+	<title>Welcome to Edosa</title>
+    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
+
 <body>
-	<div class="container">
-		<form action="" class="form">
-			<h1 class="logo"></h1>
-			<h2>Welcome!</h2>
-			<div class="text_field">
-				<input type="text" required>
-				<span></span>
-				<label> Email or Username</label>
-			</div>
-			<div class="text_field">
-				<input type="password" required>
-				<span></span>
-				<label>Password</label>
-			</div>
-			<div class="pass">Forgot Password?</div>
-			<input type="submit" value="Login">
-			<div class="signup_link">
-				Don't have an account yet? <a href="">Sign Up</a>
-			</div>
-		</form>
-		<div class="side">
-			<img src="login-bg-photo.png">
-		</div>
-	</div>
+    <div class="animate__animated animate__zoomIn">
+        <div class="container">
+            <div class="signIn-Up">
+                <form class="sign-in-form">
+                    <h2 class="title">Sign In</h2>
+                    <div class="input-field">
+                        <i class="fa-solid fa-user"></i>
+                        <input type="text" placeholder="Email or Username">
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" placeholder="Password">
+                    </div>
+                    <div class="forgotpass">Forgot Password?</div>
+                    <input type="submit" value="Sign In" class="btn">
+                    <p class="social-text">Or Sign in with social platform.</p>
+                    <div class="social-media">
+                        <a href="" class="social-icon">
+                            <i class="fab fa-google"></i>
+                        </a>
+                        <a href="" class="social-icon">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="" class="social-icon">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </div>
+                    <p class="account-text">Don't have any account yet? <a href="#" id="sign-up-btn2">Sign Up</a></p>
+                </form>
+
+                <form class="sign-up-form">
+                    <h2 class="title">Sign Up</h2>
+                    <div class="input-field">
+                        <i class="fa-solid fa-user"></i>
+                        <input type="text" placeholder="Username">
+                    </div>
+                    <div class="input-field">
+                        <i class="fa-solid fa-envelope"></i>
+                        <input type="text" placeholder="Email Address">
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" placeholder="Password">
+                    </div>
+                    <input type="submit" value="Sign Up" class="btn">
+                    <p class="social-text">Or Sign Up with social platform.</p>
+                    <div class="social-media">
+                        <a href="" class="social-icon">
+                            <i class="fab fa-google"></i>
+                        </a>
+                        <a href="" class="social-icon">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="" class="social-icon">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </div>
+                    <p class="account-text">Already have an account? <a href="#" id="sign-in-btn2">Sign In</a></p>
+                </form>
+            </div>
+            <div class="panels-container">
+                <div class="panel left-panel">
+                    <div class="content">
+                        <h3></h3>
+                        <h4>Already have an account?</h4>
+                        <button class="btn" id="sign-in-btn">Sign In</button>                   
+                    </div>
+                    <img src="/images/login-bg-photo.png" alt="" class="image">
+                </div>
+                <div class="panel right-panel">
+                    <div class="content">
+                        <h3></h3>
+                        <h4>Create your account now!</h4>
+                        <button class="btn" id="sign-up-btn">Sign Up</button>                   
+                    </div>
+
+                    <img src="/images/doctors.png" alt="" class="image">
+                </div>
+            </div>
+        </div>
+        <script src="app.js"></script>
+    </div>
 </body>
 </html>
