--- a/login.html
+++ b/login.html
@@ -78,7 +78,7 @@
                         <h4>Already have an account?</h4>
                         <button class="btn" id="sign-in-btn">Sign In</button>                   
                     </div>
-                    <img src="/images/login-bg-photo.png" alt="" class="image">
+                    <img src="images/login-bg-photo.png" alt="" class="image">
                 </div>
                 <div class="panel right-panel">
                     <div class="content">
@@ -87,7 +87,7 @@
                         <button class="btn" id="sign-up-btn">Sign Up</button>                   
                     </div>
 
-                    <img src="/images/doctors.png" alt="" class="image">
+                    <img src="images/doctors.png" alt="" class="image">
                 </div>
             </div>
         </div>
