--- a/login.html
+++ b/login.html
@@ -13,6 +13,9 @@
 <body>
     <div class="animate__animated animate__zoomIn">
         <div class="container">
+            <button class="back-btn">
+                <span class="fa-solid fa-arrow-left"></span> Back 
+            </button>
             <div class="signIn-Up">
                 <form class="sign-in-form">
                     <h2 class="title">Sign In</h2>
@@ -23,6 +26,7 @@
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
                         <input type="password" placeholder="Password">
+                        <i class="fa-sharp fa-solid fa-eye"></i>
                     </div>
                     <div class="forgotpass">Forgot Password?</div>
                     <input type="submit" value="Sign In" class="btn">
@@ -54,6 +58,12 @@
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
                         <input type="password" placeholder="Password">
+                        <i class="fa-sharp fa-solid fa-eye"></i>
+                    </div>
+                    <div class="input-field">
+                        <i class="fa-sharp fa-solid fa-circle-check"></i>
+                        <input type="password" placeholder="Confirm Password">
+                        <i class="fa-sharp fa-solid fa-eye"></i>
                     </div>
                     <input type="submit" value="Sign Up" class="btn">
                     <p class="social-text">Or Sign Up with social platform.</p>
@@ -86,7 +96,6 @@
                         <h4>Create your account now!</h4>
                         <button class="btn" id="sign-up-btn">Sign Up</button>                   
                     </div>
-
                     <img src="images/doctors.png" alt="" class="image">
                 </div>
             </div>
