--- a/doctor-dboard.html
+++ b/doctor-dboard.html
@@ -183,7 +183,7 @@
                             <tr>
                                 <td>
                                     <div class="img-box-small">
-                                        <img src="/images/profile2.jpg" alt="">
+                                        <img src="images/profile2.jpg" alt="">
                                     </div>
                                 </td>
                                 <td>Dra. Jane Doe</td>
@@ -193,7 +193,7 @@
                             <tr>
                                 <td>
                                     <div class="img-box-small">
-                                        <img src="/images/profile1.jpg" alt="">
+                                        <img src="images/profile1.jpg" alt="">
                                     </div>
                                 </td>
                                 <td>Dr. James Doe</td>
@@ -203,7 +203,7 @@
                             <tr>
                                 <td>
                                     <div class="img-box-small">
-                                        <img src="/images/profile4.jpg.png" alt="">
+                                        <img src="images/profile4.jpg.png" alt="">
                                     </div>
                                 </td>
                                 <td>Dra. Jenny Doe</td>
@@ -213,7 +213,7 @@
                             <tr>
                                 <td>
                                     <div class="img-box-small">
-                                        <img src="/images/profile3.jpg" alt="">
+                                        <img src="images/profile3.jpg" alt="">
                                     </div>
                                 </td>
                                 <td>Dr. John Doe</td>
