--- a/login.html
+++ b/login.html
@@ -17,17 +17,19 @@
                 <span class="fa-solid fa-arrow-left"></span> Back 
             </button>
             <div class="signIn-Up">
-                <form class="sign-in-form">
+                <form class="sign-in-form" action="doctor-dboard.html" method="post" name="form" onsubmit="return validated()">
                     <h2 class="title">Sign In</h2>
                     <div class="input-field">
                         <i class="fa-solid fa-user"></i>
-                        <input type="text" placeholder="Email or Username">
+                        <input type="text" placeholder="Email or Username" name="email">
                     </div>
+                    <div id="email_error">Please fill up your Email or Username</div>
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password">
+                        <input type="password" placeholder="Password" name="password">
                         <i class="fa-sharp fa-solid fa-eye"></i>
                     </div>
+                    <div id="pass_error">Please fill up your Password</div>
                     <div class="forgotpass">Forgot Password?</div>
                     <input type="submit" value="Sign In" class="btn">
                     <p class="social-text">Or Sign in with social platform.</p>
@@ -101,6 +103,7 @@
             </div>
         </div>
         <script src="app.js"></script>
+        <script src="valid.js"></script>
     </div>
 </body>
 </html>
