--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
                 <span class="fa-solid fa-arrow-left"></span> Back 
             </button>
             <div class="signIn-Up">
-                <form class="sign-in-form" action="doctor-dboard.html" method="post" name="form" onsubmit="return validated()">
+                <form class="sign-in-form" action="doctor-dboard.html" method="get" name="form" onsubmit="return validated()">
                     <h2 class="title">Sign In</h2>
                     <div class="input-field">
                         <i class="fa-solid fa-user"></i>
